--- a/package.json
+++ b/package.json
@@ -21,11 +21,16 @@
 		"svelte-check": "^4.0.0",
 		"tailwindcss": "^4.1.17",
 		"typescript": "^5.0.0",
-		"vite": "^6.0.0"
+		"vite": "^6.0.0",
+		"vite-plugin-devtools-json": "^1.0.0"
 	},
 	"type": "module",
 	"dependencies": {
 		"axios": "^1.6.0",
+		"class-variance-authority": "^0.7.1",
+		"clsx": "^2.1.1",
+		"lucide-svelte": "^0.559.0",
+		"tailwind-merge": "^3.4.0",
 		"zod": "^3.22.0"
 	}
 }
